--- a/index.html
+++ b/index.html
@@ -2,66 +2,52 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>VYS Elektrik & Yapı Market | Batman</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="VYS Elektrik & Yapı Market - Batman Merkez. Elektrik ve yapı malzemeleri. Uygun fiyat, kaliteli ürün.">
-<meta name="keywords" content="VYS Elektrik, Batman Elektrikçi, Yapı Market, Elektrik Malzemeleri">
+<title>VYS Elektrik & Yapı Market</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#0b1320;color:#fff}
-header{text-align:center;padding:40px 20px}
-header img{max-width:180px}
-h1{color:#f5c56b;margin:15px 0}
-.btn{display:inline-block;margin:10px;padding:14px 22px;border-radius:6px;text-decoration:none;font-weight:bold}
-.call{background:#f5c56b;color:#000}
-.whatsapp{background:#25D366;color:#fff}
-section{padding:30px 20px;max-width:900px;margin:auto}
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px}
-.card{background:#131c2f;padding:20px;border-radius:8px}
-footer{text-align:center;padding:20px;font-size:14px;color:#aaa}
-.whatsapp-float{
-position:fixed;bottom:20px;right:20px;
-background:#25D366;color:#fff;
-padding:14px 18px;border-radius:50px;
-font-weight:bold;text-decoration:none;
-box-shadow:0 4px 10px rgba(0,0,0,0.4)
-}
+body{margin:0;font-family:Arial;background:#f4f4f4;color:#333}
+header{background:#111;color:#fff;padding:20px;text-align:center}
+header img{max-width:140px}
+section{padding:40px;text-align:center}
+.services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px}
+.card{background:#fff;padding:20px;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,.1)}
+footer{background:#111;color:#fff;text-align:center;padding:20px}
+a.whatsapp{background:#25d366;color:#fff;padding:15px 25px;border-radius:5px;text-decoration:none;display:inline-block}
 </style>
 </head>
-
 <body>
 
 <header>
-<img src="logo.png" alt="VYS Elektrik Logo">
+<img src="logo.png">
 <h1>VYS Elektrik & Yapı Market</h1>
-<p>Batman / Merkez</p>
-
-<a class="btn call" href="tel:05327117208">📞 Hemen Ara</a>
-<a class="btn whatsapp" href="https://wa.me/905327117208" target="_blank">💬 WhatsApp</a>
+<p>Elektrik • İnşaat • Hırdavat</p>
 </header>
 
 <section>
+<h2>Hakkımızda</h2>
+<p>VYS Elektrik & Yapı Market olarak Batman Merkez’de elektrik, inşaat ve yapı malzemeleri alanında kaliteli ürünleri uygun fiyatlarla sunuyoruz.</p>
+</section>
+
+<section>
 <h2>Hizmetlerimiz</h2>
-<div class="cards">
-<div class="card">🔌 Elektrik Malzemeleri</div>
-<div class="card">🏗️ Yapı & İnşaat Ürünleri</div>
-<div class="card">🛠️ Tesisat & Montaj</div>
-<div class="card">⚡ Uygun Fiyat – Kaliteli Ürün</div>
+<div class="services">
+<div class="card">⚡ Elektrik Malzemeleri</div>
+<div class="card">🏗 İnşaat Malzemeleri</div>
+<div class="card">🔩 Hırdavat Ürünleri</div>
+<div class="card">🧰 Toptan & Perakende Satış</div>
 </div>
 </section>
 
 <section>
 <h2>İletişim</h2>
-<p><strong>Telefon:</strong> 0532 711 72 08</p>
-<p><strong>Konum:</strong> Batman / Merkez</p>
+<p>📍 Batman / Merkez</p>
+<p>📞 0532 711 72 08</p>
+<a class="whatsapp" href="https://wa.me/905327117208">WhatsApp'tan Yaz</a>
 </section>
 
 <footer>
 © 2025 VYS Elektrik & Yapı Market
 </footer>
-
-<a class="whatsapp-float" href="https://wa.me/905327117208" target="_blank">
-💬 WhatsApp
-</a>
 
 </body>
 </html>
