--- a/index.html
+++ b/index.html
@@ -51,3 +51,74 @@ a.whatsapp{background:#25d366;color:#fff;padding:15px 25px;border-radius:5px;tex
 
 </body>
 </html>
+<section style="padding:40px;background:#f9f9f9;color:#000">
+<h2 style="text-align:center">Ürünlerimiz</h2>
+
+<!-- PRİZ & ANAHTAR -->
+<h3>🔌 Priz & Anahtar Grubu</h3>
+<div class="urunler">
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0000705_gunsan-visage-toprakli-priz.jpeg">
+    <p>Günsan Topraklı Priz</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0000710_gunsan-anahtar.jpeg">
+    <p>Günsan Anahtar</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+</div>
+
+<!-- AYDINLATMA -->
+<h3>💡 Aydınlatma</h3>
+<div class="urunler">
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001201_led-ampul.jpeg">
+    <p>LED Ampul</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001210_rgb-led.jpeg">
+    <p>Akıllı RGB LED</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+</div>
+
+<!-- SİGORTA & PANO -->
+<h3>⚡ Sigorta & Pano</h3>
+<div class="urunler">
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001402_otomatik-sigorta.jpeg">
+    <p>Otomatik Sigorta</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001410_kacak-akim.jpeg">
+    <p>Kaçak Akım Rölesi</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+</div>
+
+<!-- TESİSAT -->
+<h3>🧰 Tesisat & Aksesuar</h3>
+<div class="urunler">
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001605_izolasyon-bandi.jpeg">
+    <p>İzolasyon Bandı</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+  <div class="urun">
+    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001612_kablo-bagi.jpeg">
+    <p>Kablo Bağı</p>
+    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
+  </div>
+</div>
+</section>
+
+<style>
+.urunler{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:15px;margin-bottom:30px}
+.urun{background:#fff;padding:10px;border-radius:8px;text-align:center}
+.urun img{max-width:100%;height:150px;object-fit:contain}
+.urun a{display:block;margin-top:8px;background:#25d366;color:#fff;padding:8px;border-radius:5px;text-decoration:none}
+</style>
+
