--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4;color:#333}
-header{background:#111;color:#fff;padding:20px;text-align:center}
+header{background:#111;color:#fff;padding:30px;text-align:center}
 header img{max-width:140px}
-section{padding:40px;text-align:center}
-.services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px}
-.card{background:#fff;padding:20px;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,.1)}
+section{padding:40px}
+h2,h3{text-align:center}
+.urunler{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px}
+.urun{background:#fff;padding:15px;border-radius:10px;text-align:center;box-shadow:0 0 10px rgba(0,0,0,.1)}
+.urun img{width:100%;height:150px;object-fit:contain}
+.urun a{display:block;margin-top:10px;background:#25d366;color:#fff;padding:10px;border-radius:6px;text-decoration:none}
 footer{background:#111;color:#fff;text-align:center;padding:20px}
-a.whatsapp{background:#25d366;color:#fff;padding:15px 25px;border-radius:5px;text-decoration:none;display:inline-block}
 </style>
 </head>
 <body>
@@ -20,29 +22,34 @@ a.whatsapp{background:#25d366;color:#fff;padding:15px 25px;border-radius:5px;tex
 <header>
 <img src="logo.png">
 <h1>VYS Elektrik & Yapı Market</h1>
-<p>Elektrik • İnşaat • Hırdavat</p>
+<p>Batman / Merkez</p>
+<a href="https://wa.me/905327117208" style="color:#25d366">WhatsApp: 0532 711 72 08</a>
 </header>
 
 <section>
-<h2>Hakkımızda</h2>
-<p>VYS Elektrik & Yapı Market olarak Batman Merkez’de elektrik, inşaat ve yapı malzemeleri alanında kaliteli ürünleri uygun fiyatlarla sunuyoruz.</p>
-</section>
+<h2>Ürün Gruplarımız</h2>
 
-<section>
-<h2>Hizmetlerimiz</h2>
-<div class="services">
-<div class="card">⚡ Elektrik Malzemeleri</div>
-<div class="card">🏗 İnşaat Malzemeleri</div>
-<div class="card">🔩 Hırdavat Ürünleri</div>
-<div class="card">🧰 Toptan & Perakende Satış</div>
+<h3>🔌 Priz & Anahtar</h3>
+<div class="urunler">
+  <div class="urun"><img src="priz.jpg"><p>Topraklı Priz</p><a href="https://wa.me/905327117208">WhatsApp’tan Sor</a></div>
+  <div class="urun"><img src="anahtar.jpg"><p>Anahtar</p><a href="https://wa.me/905327117208">WhatsApp’tan Sor</a></div>
 </div>
-</section>
 
-<section>
-<h2>İletişim</h2>
-<p>📍 Batman / Merkez</p>
-<p>📞 0532 711 72 08</p>
-<a class="whatsapp" href="https://wa.me/905327117208">WhatsApp'tan Yaz</a>
+<h3>💡 Aydınlatma</h3>
+<div class="urunler">
+  <div class="urun"><img src="led.jpg"><p>LED Ampul</p><a href="https://wa.me/905327117208">WhatsApp’tan Sor</a></div>
+</div>
+
+<h3>⚡ Sigorta & Pano</h3>
+<div class="urunler">
+  <div class="urun"><img src="sigorta.jpg"><p>Otomatik Sigorta</p><a href="https://wa.me/905327117208">WhatsApp’tan Sor</a></div>
+</div>
+
+<h3>🧰 Tesisat</h3>
+<div class="urunler">
+  <div class="urun"><img src="bant.jpg"><p>İzolasyon Bandı</p><a href="https://wa.me/905327117208">WhatsApp’tan Sor</a></div>
+</div>
+
 </section>
 
 <footer>
@@ -51,74 +58,3 @@ a.whatsapp{background:#25d366;color:#fff;padding:15px 25px;border-radius:5px;tex
 
 </body>
 </html>
-<section style="padding:40px;background:#f9f9f9;color:#000">
-<h2 style="text-align:center">Ürünlerimiz</h2>
-
-<!-- PRİZ & ANAHTAR -->
-<h3>🔌 Priz & Anahtar Grubu</h3>
-<div class="urunler">
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0000705_gunsan-visage-toprakli-priz.jpeg">
-    <p>Günsan Topraklı Priz</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0000710_gunsan-anahtar.jpeg">
-    <p>Günsan Anahtar</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-</div>
-
-<!-- AYDINLATMA -->
-<h3>💡 Aydınlatma</h3>
-<div class="urunler">
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001201_led-ampul.jpeg">
-    <p>LED Ampul</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001210_rgb-led.jpeg">
-    <p>Akıllı RGB LED</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-</div>
-
-<!-- SİGORTA & PANO -->
-<h3>⚡ Sigorta & Pano</h3>
-<div class="urunler">
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001402_otomatik-sigorta.jpeg">
-    <p>Otomatik Sigorta</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001410_kacak-akim.jpeg">
-    <p>Kaçak Akım Rölesi</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-</div>
-
-<!-- TESİSAT -->
-<h3>🧰 Tesisat & Aksesuar</h3>
-<div class="urunler">
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001605_izolasyon-bandi.jpeg">
-    <p>İzolasyon Bandı</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-  <div class="urun">
-    <img src="https://online.gunsanelectric.com/images/thumbs/000/0001612_kablo-bagi.jpeg">
-    <p>Kablo Bağı</p>
-    <a href="https://wa.me/905327117208">WhatsApp’tan Sor</a>
-  </div>
-</div>
-</section>
-
-<style>
-.urunler{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:15px;margin-bottom:30px}
-.urun{background:#fff;padding:10px;border-radius:8px;text-align:center}
-.urun img{max-width:100%;height:150px;object-fit:contain}
-.urun a{display:block;margin-top:8px;background:#25d366;color:#fff;padding:8px;border-radius:5px;text-decoration:none}
-</style>
-
