--- a/index.html
+++ b/index.html
@@ -58,3 +58,21 @@ footer{background:#111;color:#fff;text-align:center;padding:20px}
 
 </body>
 </html>
+<section style="background:#0f172a;color:white;padding:50px 20px;text-align:center">
+  <h2 style="font-size:28px">VYS Elektrik & Yapı Market</h2>
+  <p style="max-width:700px;margin:auto;font-size:16px">
+    Batman Merkez’de elektrik, tesisat, aydınlatma ve yapı
+    malzemeleri alanında hizmet vermekteyiz.
+    <br><br>
+    Ustalar ve bireysel müşteriler için
+    kaliteli ürün, hızlı tedarik ve güvenilir satış.
+  </p>
+
+  <a href="https://wa.me/905327117208"
+     style="display:inline-block;margin-top:20px;
+     background:#25d366;color:white;
+     padding:14px 24px;border-radius:10px;
+     text-decoration:none;font-weight:bold">
+     WhatsApp’tan Hemen İletişime Geç
+  </a>
+</section>
