--- a/index.html
+++ b/index.html
@@ -1,45 +1,86 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>VYS Elektrik & Yapı Market</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VYS Elektrik & Yapı Market | Batman Elektrik Malzemeleri</title>
+  <meta name="description" content="VYS Elektrik & Yapı Market – Batman Merkez'de elektrik, aydınlatma, tesisat ve yapı malzemeleri. Uygun fiyat, kaliteli ürün, hızlı tedarik." />
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0b132b;
-      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0b1220;
+      color: #ffffff;
     }
-    header {
+
+    a { text-decoration: none; }
+
+    /* HERO */
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 60px 20px;
+      padding: 40px 20px;
+      background: linear-gradient(rgba(11,18,32,0.9), rgba(11,18,32,0.9)),
+        url('https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?auto=format&fit=crop&w=1400&q=80');
+      background-size: cover;
+      background-position: center;
     }
-    header img {
-      width: 140px;
+
+    .hero img {
+      width: 130px;
       margin-bottom: 20px;
     }
-    h1 {
-      color: #fca311;
+
+    .hero h1 {
+      font-size: 42px;
+      margin-bottom: 10px;
+      color: #f5c16c;
     }
-    .btns a {
+
+    .hero p {
+      max-width: 700px;
+      margin: 0 auto 30px;
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    .buttons a {
       display: inline-block;
       margin: 10px;
       padding: 14px 26px;
       border-radius: 10px;
-      text-decoration: none;
-      color: #fff;
       font-weight: bold;
+      font-size: 16px;
     }
-    .call { background: #fca311; }
-    .wp { background: #25D366; }
 
+    .call {
+      background: #f5c16c;
+      color: #000;
+    }
+
+    .whatsapp {
+      background: #25d366;
+      color: #fff;
+    }
+
+    /* SECTIONS */
     section {
-      padding: 40px 20px;
-      max-width: 1100px;
+      padding: 60px 20px;
+      max-width: 1200px;
       margin: auto;
     }
 
+    h2 {
+      text-align: center;
+      margin-bottom: 40px;
+      color: #f5c16c;
+    }
+
+    /* CATEGORIES */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -47,71 +88,107 @@
     }
 
     .card {
-      background: #1c2541;
-      border-radius: 14px;
-      padding: 15px;
+      background: #111a2e;
+      border-radius: 16px;
+      overflow: hidden;
       text-align: center;
+      transition: transform 0.3s ease;
     }
+
+    .card:hover { transform: translateY(-6px); }
 
     .card img {
       width: 100%;
       height: 160px;
       object-fit: cover;
-      border-radius: 10px;
+    }
+
+    .card h3 {
+      padding: 20px 10px;
+      font-size: 18px;
+    }
+
+    /* CONTACT */
+    .contact {
+      text-align: center;
+      background: #0f172a;
+      border-radius: 20px;
+      padding: 40px 20px;
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      background: #000;
-      color: #aaa;
+      font-size: 14px;
+      opacity: 0.7;
+    }
+
+    /* FLOAT WHATSAPP */
+    .float-whatsapp {
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      background: #25d366;
+      color: #fff;
+      padding: 14px 20px;
+      border-radius: 50px;
+      font-weight: bold;
     }
   </style>
 </head>
-
 <body>
 
-<header>
-  <img src="https://i.imgur.com/1X6xHqS.png" alt="VYS Logo">
-  <h1>VYS Elektrik & Yapı Market</h1>
-  <p>Batman / Merkez</p>
-
-  <div class="btns">
-    <a class="call" href="tel:05327117208">📞 Hemen Ara</a>
-    <a class="wp" href="https://wa.me/905327117208">💬 WhatsApp</a>
+  <!-- HERO -->
+  <div class="hero">
+    <div>
+      <img src="https://raw.githubusercontent.com/vyselektryk/vyselektryk.github.io/main/logo.png" alt="VYS Elektrik Logo">
+      <h1>VYS Elektrik & Yapı Market</h1>
+      <p>
+        Batman Merkez'de elektrik, aydınlatma, tesisat ve yapı malzemeleri.
+        Ustalara ve bireysel müşterilere uygun fiyatlı, kaliteli ürünler.
+      </p>
+      <div class="buttons">
+        <a class="call" href="tel:05327117208">📞 Hemen Ara</a>
+        <a class="whatsapp" href="https://wa.me/905327117208">💬 WhatsApp</a>
+      </div>
+    </div>
   </div>
-</header>
 
-<section>
-  <h2>Ürün Kategorilerimiz</h2>
-  <div class="grid">
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc">
-      <h3>Kablo & Tesisat</h3>
+  <!-- CATEGORIES -->
+  <section>
+    <h2>Ürün Kategorileri</h2>
+    <div class="grid">
+      <a class="card" href="https://wa.me/905327117208">
+        <img src="https://images.unsplash.com/photo-1581092334494-9b5b8b7b6f2c?auto=format&fit=crop&w=800&q=80">
+        <h3>Elektrik Malzemeleri</h3>
+      </a>
+      <a class="card" href="https://wa.me/905327117208">
+        <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=800&q=80">
+        <h3>Aydınlatma Ürünleri</h3>
+      </a>
+      <a class="card" href="https://wa.me/905327117208">
+        <img src="https://images.unsplash.com/photo-1604014237800-1c9102c219da?auto=format&fit=crop&w=800&q=80">
+        <h3>Kablo & Tesisat</h3>
+      </a>
+      <a class="card" href="https://wa.me/905327117208">
+        <img src="https://images.unsplash.com/photo-1586864387789-628af9feed72?auto=format&fit=crop&w=800&q=80">
+        <h3>Yapı & İnşaat</h3>
+      </a>
     </div>
+  </section>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e">
-      <h3>Şalter & Priz</h3>
-    </div>
+  <!-- CONTACT -->
+  <section class="contact">
+    <h2>İletişim</h2>
+    <p><strong>Telefon:</strong> 0532 711 72 08</p>
+    <p><strong>Konum:</strong> Batman / Merkez</p>
+  </section>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c">
-      <h3>Aydınlatma</h3>
-    </div>
+  <footer>
+    © 2025 VYS Elektrik & Yapı Market
+  </footer>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1590650153855-d9e808231d41">
-      <h3>Yapı & İnşaat</h3>
-    </div>
-
-  </div>
-</section>
-
-<footer>
-  © 2025 VYS Elektrik & Yapı Market
-</footer>
+  <a class="float-whatsapp" href="https://wa.me/905327117208">💬 WhatsApp</a>
 
 </body>
 </html>
