--- a/index.html
+++ b/index.html
@@ -2,59 +2,6 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>VYS Elektrik & Yapı Market</title>
+  <title>VYS Elektrik & Yapı Market | Batman</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body{margin:0;font-family:Arial;background:#0b1220;color:#fff;text-align:center}
-    header{padding:80px 20px}
-    h1{color:#f5c46b;font-size:36px}
-    p{max-width:700px;margin:0 auto 30px;line-height:1.6}
-    .btn{display:inline-block;padding:14px 24px;margin:10px;border-radius:8px;text-decoration:none;font-weight:bold}
-    .call{background:#f5c46b;color:#000}
-    .wp{background:#25d366;color:#fff}
-    section{padding:60px 20px;background:#111a2e}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px;max-width:1000px;margin:auto}
-    .card{background:#0b1220;border-radius:12px;padding:20px}
-    .card img{width:100%;border-radius:10px}
-    footer{padding:20px;font-size:14px;opacity:.6}
-    .whatsapp{position:fixed;right:20px;bottom:20px;background:#25d366;color:#fff;padding:14px 18px;border-radius:50px;text-decoration:none;font-weight:bold}
-  </style>
-</head>
-
-<body>
-
-<header>
-  <h1>VYS Elektrik & Yapı Market</h1>
-  <p>Batman Merkez’de elektrik, aydınlatma, tesisat ve yapı malzemeleri. Ustalara ve bireysel müşterilere kaliteli ürünler.</p>
-  <a class="btn call" href="tel:05327117208">📞 Hemen Ara</a>
-  <a class="btn wp" href="https://wa.me/905327117208">💬 WhatsApp</a>
-</header>
-
-<section>
-  <h2>Ürün Kategorileri</h2>
-  <div class="grid">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1581091215367-59ab6c3c1c4d">
-      <h3>Elektrik Malzemeleri</h3>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231">
-      <h3>Aydınlatma Ürünleri</h3>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837">
-      <h3>Kablo & Tesisat</h3>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994">
-      <h3>Yapı & İnşaat</h3>
-    </div>
-  </div>
-</section>
-
-<footer>© 2025 VYS Elektrik & Yapı Market – Batman</footer>
-
-<a class="whatsapp" href="https://wa.me/905327117208">WhatsApp</a>
-
-</body>
-</html>
+  <meta name="description" content="VYS Elektrik & Yapı Market - Batman Merkez elektrik, aydınlatma,
